<resources>
    <string name="app_name">ConectaMovil</string>
    <string name="CrearCuentaTxt">Crear cuenta</string>
    <string name="NombreRG">Nombre</string>
    <string name="CorreoRG">Correo electrónico</string>
    <string name="ContraseñaRG">Contraseña</string>
    <string name="ConfirmarClave">Confirmar Contraseña</string>
    <string name="RegistrarUsuario">Registrar Usuario</string>
    <string name="TengoUnaCuenta">¿Ya tengo una cuenta?</string>

    <string name="hint_nombre">Nombre:</string>
    <string name="hint_telefono">Telefono:</string>
    <string name="hint_correo_electronico">Correo electronico:</string>
    <string name="btn_guarda">Guardar registro en la base de datos</string>
    <string name="btn_guardaVista">Guardar Contactos</string>

    <string name="menu_nuevo">Nuevo</string>
</resources>

