<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CrearCuentaTxt"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_marginTop="10dp" />

        <!-- app:lottie_fileName="registro.json" -->

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:foreground="@drawable/poerfil_imagen"
            tools:ignore="MissingClass" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:hint="@string/NombreRG"
                android:id="@+id/NombreRG"
                android:inputType="textPersonName|textCapWords"
                android:padding="20dp"
                android:drawableStart="@drawable/person"
                android:drawablePadding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:hint="@string/CorreoRG"
                android:id="@+id/CorreoRG"
                android:inputType="textEmailAddress"
                android:padding="20dp"
                android:drawableStart="@drawable/correo"
                android:drawablePadding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            app:hintAnimationEnabled="false">

            <EditText
                android:hint="@string/ContraseñaRG"
                android:id="@+id/ContraseñaRG"
                android:inputType="textPassword"
                android:padding="20dp"
                android:drawableStart="@drawable/clave"
                android:drawablePadding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            app:hintAnimationEnabled="false">

            <EditText
                android:hint="@string/ConfirmarClave"
                android:id="@+id/ConfirmarClave"
                android:inputType="textPassword"
                android:padding="20dp"
                android:drawableStart="@drawable/clave"
                android:drawablePadding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:text="@string/RegistrarUsuario"
            android:id="@+id/RegistrarUsuario"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/TengoUnaCuenta"
            android:id="@+id/TengoUnaCuenta"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="15dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>
